Fixed nav menu sizing on iphone

--- a/assets/less/navigation.less
+++ b/assets/less/navigation.less
@@ -24,7 +24,7 @@ nav {
         justify-content: center;
         margin: 0 auto;
         height: 30vh;
-        width: 75vw;
+        width: 80vw;
         .menu-item {
             background-color: @node_green_dark;
             color: white;
@@ -33,16 +33,16 @@ nav {
             justify-content: center;
             height: 20vh;
             max-height: 100px;
-            margin: 0 5px;
             min-height: 45px;
-            width: 15vw;
-            min-width: 150px;
+            min-width: 100px;
+            padding: 0 10px;
+            width: 25%;
             a:hover {
                 text-decoration: none;
             }
             .title {
                 font-family: sans-serif;
-                font-size: 1.5em;
+                font-size: 2em;
                 font-variant: small-caps;
                 text-align: center;
                 text-transform: capitalize;
